sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3()  
{

	for( i<- 0 to getNombreValeurs()-2 )
	{
		if(getValeur(i) > getValeur(i+1))
		{
			echange(i,i+1)
			estRange = 1
		}
	}
	return
}
